--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -67,3 +67,11 @@ body {
   height: 100vh;
 }
 
+.centered-page {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
