--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -46,11 +46,12 @@ button {
  color: rgb(0, 0, 0);
  padding: 12px 24px;
  font-size: 16px;
- border: none;
+ border: 1px solid black;
  border-radius: 8px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  width: 220px;
+ margin-bottom: 5px;
 }
 
 
@@ -65,6 +66,7 @@ body {
   box-sizing: border-box;
   background-color: #f0f0f0;
   height: 100vh;
+  overflow: hidden;
 }
 .button-group {
  display: flex !important;
@@ -86,7 +88,6 @@ body {
  justify-content: flex-start;
  align-items: center;
  height: 100vh;
- padding-left: 42vw; /* pushes card into the white part */
 }
 
 
@@ -151,6 +152,7 @@ body {
 
 .radio-group {
  display: flex;
+ justify-content: center;
  gap: 1rem;
  margin-bottom: 12px;
 }
