--- a/packages/client/src/evaluations.css
+++ b/packages/client/src/evaluations.css
@@ -105,3 +105,15 @@ html, body, #root {
  background-color: white;
  width: 100vw;
 }
+
+.evaluation-btn-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.evaluation-btn {
+  border: 5px;
+}
