--- a/packages/client/src/components/Footer.css
+++ b/packages/client/src/components/Footer.css
@@ -1,19 +1,58 @@
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  align-items: center;
-  justify-content: flex-start;
-  display: flex;
-  /* text-align: center; */
-  background-color: #f5f5f5;
-  border-top: 4px solid #f44336;
+ position: fixed;
+ bottom: 0;
+ left: 0;
+ width: 100%;
+ border-top: 4px solid #f44336;
+ background-color: white;
+ display: flex;
+ align-items: flex-end;
+ padding: 10px 20px;
+ box-sizing: border-box;
+ z-index: 100;
 }
 
+
+.footer-content {
+ display: flex;
+ justify-content: space-between;
+ align-items: flex-end;
+ width: 100%;
+}
+
+
+.footer-left {
+ display: flex;
+ align-items: flex-end;
+}
+
+
 .footer-logo {
-  height: 2em;
-  padding: 0.4em 2em;
-  will-change: filter;
-  transition: filter 300ms;
+ height: 130px;
+ padding: 0;
+ margin: 0;
+}
+
+
+.footer-center {
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-end;
+ align-items: center;
+ flex: 1;
+ padding-bottom: 5px;
+}
+
+
+.footer-bottom {
+ font-size: 12px;
+ color: gray;
+ margin-left: -930px;
+}
+
+
+.footer-bottom a {
+ margin-left: 10px;
+ text-decoration: none;
+ color: gray;
 }
