--- a/packages/client/src/components/Footer.css
+++ b/packages/client/src/components/Footer.css
@@ -7,13 +7,14 @@
  background-color: white;
  display: flex;
  align-items: flex-end;
- padding: 10px 20px;
+ /* padding: 10px 20px; */
  box-sizing: border-box;
  z-index: 100;
 }
 
 
 .footer-content {
+  /* background-color: #f44336; */
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
@@ -22,19 +23,21 @@
 
 
 .footer-left {
+  /* background-color: aqua; */
  display: flex;
  align-items: flex-end;
 }
 
 
 .footer-logo {
- height: 130px;
+ height: 4em;
  padding: 0;
  margin: 0;
 }
 
 
 .footer-center {
+  /* background-color: blue; */
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
@@ -45,9 +48,10 @@
 
 
 .footer-bottom {
+  /* background-color: chartreuse; */
  font-size: 12px;
  color: gray;
- margin-left: -930px;
+ /* margin-left: -930px; */
 }
 
 
