--- a/packages/client/src/pages/login.css
+++ b/packages/client/src/pages/login.css
@@ -55,7 +55,7 @@ button:hover {
 }
 
 .signup-card {
- margin-top: 50px;
+ /* margin-top: 50px; */
  background-color: white;
  padding: 1rem;
  width: 300px;
