styled evaluations page

--- a/packages/client/src/pages/evaluations.css
+++ b/packages/client/src/pages/evaluations.css
@@ -30,3 +30,12 @@
 .semester-option {
   list-style-type: none;
 }
+
+.evaluations-page {
+  text-align: center;
+}
+
+.add-eval-button {
+  text-align: center;
+  width: 20%
+}
