--- a/packages/client/src/layouts/Layout.css
+++ b/packages/client/src/layouts/Layout.css
@@ -27,6 +27,10 @@ footer {
   flex-shrink: 0;
 }
 
+header {
+  margin-bottom: 90px;
+}
+
 .main-content-area {
   flex: 1;
   /* background-color: aqua; */
