--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -21,7 +21,7 @@ html,#root,body {
   align-items: center;       /* Center vertically */
   height: 100%;             /* Full viewport height */
   width: 100%;              /* Full viewport width */
-  background: linear-gradient(#ffffff 60%, #edc6c6 100%);
+  background-color: #f0f2f5;
   /* background-color: aqua; */
 }
 
